Fixes to kardium imgs and more text changes

--- a/88rising.html
+++ b/88rising.html
@@ -59,11 +59,11 @@
                             </div>
                             <div>
                                 <h3>Team</h3>
-                                <p>Justin Yu, Alex Luowan, Claret Egwim, Terrence Xu</p>
+                                <p><a href="https://www.justinyu.design/" class="in-text-link" target="_blank">Justin Yu</a>, <a href="https://www.alexluowan.ca/" class="in-text-link" target="_blank">Alex Luowan</a>,<a href="https://www.claret-egwim.com/" class="in-text-link" target="_blank"> Claret Egwim</a>, Terrence Xu</p>
                             </div>
                             <div>
                                 <h3>Tools</h3>
-                                <p>Figma, After Effects, Premiere Pro, Audacity, Google Survey</p>
+                                <p>Figma, After Effects, Premiere Pro, Audacity, Google Forms</p>
                             </div>
                         </div>
                     </div> 
