--- a/Splitwise.html
+++ b/Splitwise.html
@@ -49,19 +49,19 @@
                     </figure> 
                 </div>
                 <div class="project-header grid two-col-project-grid add-gutters">
-                    <h1>A Senior UI/UX feature design project for the expense splitting mobile application Splitwise.</h1>
+                    <h1>A Feature Design project for the expense splitting mobile application Splitwise.</h1>
                     <div class="grid project-roles three-col-project-grid">
                         <div>
                             <h3>My Contribution</h3>
-                            <p>UX Researcher, UI Designer, Prototyper</p>
+                            <p>UX/UI Designer, UX Researcher</p>
                         </div>
                         <div>
                             <h3>Team</h3>
-                            <p>Patricia Sugiarta, Kezia Taufiq</p>
+                            <p><a href="https://www.patriciasugiarta.com/" class="in-text-link" target="_blank"> Patricia Sugiarta</a>, <a href="https://kezia-taufiq.webflow.io/" class="in-text-link" target="_blank">Kezia Taufiq</a></p>
                         </div>                        
                         <div>
                             <h3>Tools</h3>
-                            <p>Figma, After Effects</p>
+                            <p>Figma, After Effects, Google Forms</p>
                         </div>
                     </div>
                 </div> 
@@ -72,15 +72,15 @@
             <div class="separating-line"></div>
             <section class="project-analysis text-container" id="overview">
                 <h2>Overview</h2>
-                <p>This is a project for an Senior Interaction Design university course that aims to familiarise ourselves with working on an existing design system before developing a new design system in a later project with <a href="fureverhome.html" class="in-text-link">Fureverhome</a>. My team and I were assigned to research and create a new feature for <a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses for a group of people.</p>
+                <p><a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses,  makes it easy for friends, roommates, and groups to track and organize shared expenses so everyone can settle up fairly. However, the platform relies heavily on a trust-based system where users must manually log and approve expenses. This can create uncertainty or disagreements, potentially straining real-life relationships when expectations or entries don’t align.</p>
                 <a href="Splitwise.html#solution" class="label-button" id="solution-button">Jump to implemented feature ↓</a>
             </section>
 
             <section class="project-analysis grid two-col-project-grid add-gutters"> 
                 <div class="text-container">
                     <h2>Research</h2>
-                    <p>To start our research for the app, we first looked at the app itself, studying its existing design system and interaction. Afterwards, each of us conducted secondary research online to find potential problems with Splitwise currently, this would help us narrow down our scope and assist us with identifying what we wanted to look at during our primary research being user interviews and observing users interacting with the app.</p>
-                    <p>These secondary research hinted at the potential friction between users as Splitwise relies on the trust system to manage people's expenses which could strain their in-person relationship.</p>
+                    <p>To start our research for the app, we first looked at the app itself, studying its existing design system and interaction. Additional, the team also conducted research online in journals articles to find potential problems with Splitwise currently, this would help us narrow down our scope and assist us with identifying what we wanted to look at during our primary research being user interviews and observing users interacting with the app.</p>
+                    <p>These articles hinted at the potential <span>friction between users as Splitwise relies on the trust system to manage people's expenses which could strain their in-person relationship.</span></p>
                 </div>
                 <div class="project-quotes">
                     <h4>"I am <span>two degrees of separation away from a woman who lost an entire friendship group</span> because she clicked “settle up” on Splitwise after a holiday but never actually made the bank transfer, and doubled down when she got found out."</h4>
@@ -91,7 +91,7 @@
             <section class="project-analysis grid two-col-project-grid align-top add-gutters"> 
                 <div class="text-container">
                     <h3>Competitive Analysis</h3>
-                    <p>During our research, we also looked at other expense spliting application to help us understand what features Splitwise have and how they compare with others in the same market. As Splitwise has both a free and pro version, we had to take into account of the different features they offer.</p>
+                    <p>To better understand how Splitwise can stand out within the bill-spliting applications market, the team <span>conducted a competitive analysis on other expense spliting application to help us understand what features Splitwise have and how they compare with others in the same domain</span>. As Splitwise has both a free and pro version, we had to take into account of the different features they offer.</p>
                 </div>
                 <figure class="figure-analysis project-img static-img">
                     <img alt="Splitwise Competitive Analysis" class="lazy js-off" src="img/Splitwise/competitiveanalysis_100.webp"
@@ -115,7 +115,7 @@
             <section class="project-analysis grid two-col-project-grid align-top add-gutters"> 
                 <div class="text-container">
                     <h3>User Interview Insights</h3>
-                    <p>To get a better understanding of what frustrations current users have with Splitwise, we conducted two rounds of on-site user interviews with 7 participants each time. While there were various issues and potential improvements to the app that the interviewee would like to be implemented, these interview pointed towards a general frustration when they aren't aware when and if they received money from their friends and also found troublesome to ask acquaintances to settle up their debt due to social pressure.</p>
+                    <p>To get a better understanding of what frustrations current users have with Splitwise, we conducted two rounds of <span>on-site user interviews with 7 participants</span> each time. While there were various issues and potential improvements to the app that the interviewee would like to be implemented, <span>these interview pointed towards a general frustration</span> when they aren't aware when and if they received money from their friends and also found troublesome to ask acquaintances to settle up their debt <span>due to social pressure.</span></p>
                 </div>
                 <figure class="figure-analysis static-img" >
                     <img alt="User Interview Highlights" class="lazy js-off" src="img/Splitwise/SplitwiseResearch_100.webp"
@@ -138,10 +138,10 @@
 
             <section class="project-analysis">
                 <div class="text-container">
-                    <h3>Brainstorming feature and persona</h3>
-                    <p>Through interviewing users, our team came up with 3 initial ideas: A preferred payment info to let people know how to pay someone, an import spreadsheet feature to help new users coming from other expense tracking apps and finally a location-based currency feature that automatically changes the currency based on the user's location and numbering format of a specific currency.</p>
+                    <h3>Brainstorming and Persona</h3>
+                    <p>In our interviews with users, our team presented with 3 initial options: A preferred payment info to let people know how to pay someone, an import spreadsheet feature to help new users coming from other expense tracking apps and finally a location-based currency feature that automatically changes the currency based on the user's location and numbering format of a specific currency.</p>
 
-                    <p>After doing a second round of user interviews in combination with feedback from the teaching staff, our team decided to go ahead with the payment information idea with an added functionality being a 2-way verification feature. In the process, to help us visualize our users and how they would approach Splitwise and our proposed feature, we formed a main user persona below.</p>
+                    <p>After doing a second round of user interviews, the team decided recommend <span>the payment information feature with an added functionality being a 2-way verification feature.</span> In the process, to help us visualize our users and how they would approach Splitwise and our proposed feature, we formed a main user persona below.</p>
                 </div>
                 <div class="grid two-col-project-grid add-gutters static-img">
                     
@@ -178,7 +178,7 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Final mini persona</figcaption>
+                        <figcaption class="caption-analysis">Persona of Alex (target user)</figcaption>
                     </figure>
                 </div>
             </section>
@@ -231,7 +231,7 @@
                 <div class="grid two-col-project-grid add-gutters align-top">
                     <div class="text-container">
                         <h3>Final Interactive Prototype</h3>
-                        <p>When making the final prototype in Figma, I wanted to showcase the different scenarios that users might go through and as such I suggested to my team to create 3 different flows and created screens for Alex's POV which can be seen through the videos below or through the <a href="https://www.figma.com/proto/g1tXkHHChjyNEs63AG7rjh/Splitwise-Feature-Design-(public)?page-id=321%3A1562&type=design&node-id=555-1812&viewport=-468%2C-86%2C0.27&t=UmL2dw9ue8BygXPA-1&scaling=scale-down&starting-point-node-id=555%3A1812&show-proto-sidebar=1&mode=design" class="in-text-link" target="_blank">interactive prototype!</a></p>
+                        <p>As the interaction designer of the team I wanted to showcase the different scenarios that users might go through and as such the team created 3 different user prototype flows and make a short motion graphic displaying how our main user Alex would utilise Splitwise's new feature which can be seen through the videos below or through the <a href="https://www.figma.com/proto/g1tXkHHChjyNEs63AG7rjh/Splitwise-Feature-Design-(public)?page-id=321%3A1562&type=design&node-id=555-1812&viewport=-468%2C-86%2C0.27&t=UmL2dw9ue8BygXPA-1&scaling=scale-down&starting-point-node-id=555%3A1812&show-proto-sidebar=1&mode=design" class="in-text-link" target="_blank">interactive prototype!</a></p>
                     </div>
                     <div id="interactive-prototype">
                         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fg1tXkHHChjyNEs63AG7rjh%2FSplitwise-Feature-Design-(public)%3Fpage-id%3D321%253A1562%26type%3Ddesign%26node-id%3D555-1812%26viewport%3D-468%252C-86%252C0.27%26t%3DUmL2dw9ue8BygXPA-1%26scaling%3Dscale-down%26starting-point-node-id%3D555%253A1812%26show-proto-sidebar%3D1%26mode%3Ddesign" allowfullscreen></iframe>
@@ -280,7 +280,7 @@
 
             <section class="project-analysis text-container">
                 <h2>Reflection</h2>
-                <p>Through working on this project, I have gained experience with working with an existing visual and interaction design system. It has also reaffirmed the importance of designing for actual users' needs and not simply using assumptions from the design team! I've also gotten a preview into how current UX and product designer would constantly ideate and develop new ideas to further improve their products to elevate the end user's experience</p>
+                <p>Through working on this project, I have gained <span>experience with working with an existing visual and interaction design system.</span> It has also reaffirmed the importance of designing for actual users' needs and not simply using assumptions from the design team! I've also gotten an understanding into how UX and product designer would <span>constantly ideate and develop new ideas to further improve their products to elevate the end user's experience.</span></p>
             </section>
 
             <section class="grid two-col-bottomnav-grid" id="bottom-nav">
