--- a/fureverhome.html
+++ b/fureverhome.html
@@ -53,15 +53,15 @@
                     <div class="grid project-roles three-col-project-grid">
                         <div>
                             <h3>My Contribution</h3>
-                            <p>UX Researcher and UX Designer</p>
+                            <p>UX/UI Designer, UX Researcher</p>
                         </div>
                         <div>
                             <h3>Team</h3>
-                            <p>Patricia Sugiarta, Kezia Taufiq, Joanna Lin</p>
+                            <p><a href="https://www.patriciasugiarta.com/" class="in-text-link" target="_blank"> Patricia Sugiarta</a>, <a href="https://kezia-taufiq.webflow.io/" class="in-text-link" target="_blank">Kezia Taufiq</a>, Joanna Lin</p>
                         </div>
                         <div>
                             <h3>Tools</h3>
-                            <p>Figma, Zoom</p>
+                            <p>Figma, Zoom, Google Forms, Adobe Permiere Pro</p>
                         </div>
                     </div>
                 </div> 
