--- a/kardium.html
+++ b/kardium.html
@@ -78,7 +78,7 @@
                     
                     <!-- <p>My experience working at Kardium greatly expanded my capabilities as a designer. I was provided with the opportunity to learn, collaborate with various teams, and present to stakeholders and real world users weekly, elevating their visions into insights-driven features and product improvements.</p> -->
 
-                    <p>My primary role in this project involved conducting <span>design audits, ensuring accessibility compliance</span> with WCAG standards, managing the <span>design library</span>, and creating <span>guidelines for future development.</span></p>
+                    <p>My primary role in this project involved conducting <span>design audits, ensuring accessibility compliance</span> with WCAG standards, <span>managing the design library</span>, and creating <span>guidelines for future development.</span></p>
 
                     <p><span> NOTE: Due to NDA restrictions, this case study will only highlights the key tasks I contributed to creating standard guidelines for Kardium's design system at a high-level with contents replaced or left out.</span> If you'd like more details about my work, please feel free to <a href="mailto:lukedo2111@gmail.com" class="in-text-link">contact me via my email!</a></p>
                 </div>
@@ -161,7 +161,7 @@
                                         img\kardium\Dev_1080.webp 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw">
                         </noscript>
-                        <figcaption class="caption-analysis">Meeting with UI developers (illustration credit: @irasutoya)</figcaption>
+                        <figcaption class="caption-analysis">Meeting with UI developers (illustration credit: <a href="https://www.irasutoya.com/" class="in-text-link" target="_blank">@irasutoya</a> )</figcaption>
                     </figure>   
                 </div>
                 
@@ -218,9 +218,9 @@
 
                 <div class="project-quotes">
                     <h4>"The feature and interface is <span>brilliant! It would help us a lot in future procedures.</span>"</h4>
-                    <p>— Doctor from Royal Jubilee Hospital</p>
+                    <p>— Doctor from Royal Jubilee Hospital on a soon to be released software feature</p>
                     <h4><span>"I could give the person who designed this a hug!"</span></h4>
-                    <p>— Senior Clinical Software Operator</p>
+                    <p>— Senior Clinical Software Operator on a soon to be released software feature</p>
                 </div>
             </section>
 
