spelling mistake fix

--- a/kardium.html
+++ b/kardium.html
@@ -52,7 +52,7 @@
                     <h1>Building an accessible and scalable design system for designers, developers and physicians</h1>
                     <div class="grid project-roles three-col-project-grid">
                         <div>
-                            <h3>My Contribution</h3>
+                            <h3>My Role</h3>
                             <p>UX/UI Designer</p>
                         </div>
                         <div>
@@ -118,7 +118,7 @@
 
             <section class="project-analysis grid two-col-project-grid align-top">
                 <div class="text-container">
-                    <h2>A flexible design system for for both</h2>
+                    <h2>A flexible design system for both</h2>
                     <h3>Conducting Design Audits</h3>
                     <p>Starting in June, I took on the responsibility of managing our design library, with the first step being to conduct design audits of Kardium’s current Figma asset library and software implementations of different design elements such as dialog boxes. From this I synthesized the common design patterns, what was working well and areas that needed improvement, as well as <span>discovering the differences between the design mock up specs that the UX team were creating versus the software implementation</span> by the UI developers.</p>
                     <p>The audit process also involved 1:1 meetings with UX Designers, as well as meeting with UI developers from the development team to understand the process and workflow in implementing a feature after receiving the mockup specs from the UX Design team.</p>
