Edited link and img for passion projects

--- a/Splitwise.html
+++ b/Splitwise.html
@@ -72,7 +72,7 @@
             <div class="separating-line"></div>
             <section class="project-analysis text-container" id="overview">
                 <h2>Overview</h2>
-                <p><a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses,  makes it easy for friends, roommates, and groups to track and organize shared expenses so everyone can settle up fairly. However, the platform relies heavily on a trust-based system where users must manually log and approve expenses. This can create uncertainty or disagreements, potentially straining real-life relationships when expectations or entries don’t align.</p>
+                <p><a href="https://www.splitwise.com/" class="in-text-link" target="_blank">Splitwise</a>, a payment app that automatically calculates multiple bills and splits expenses,  makes it easy for friends, roommates, and groups to track and organize shared expenses so everyone can settle up fairly. However, the platform <span>relies heavily on a trust-based system where users must manually log and approve expenses.</span> This can create uncertainty or disagreements, potentially straining real-life relationships when expectations or entries don’t align.</p>
                 <a href="Splitwise.html#solution" class="label-button" id="solution-button">Jump to implemented feature ↓</a>
             </section>
 
