--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </a>
                         <div class=" grid two-col-index-grid">
                             <h3>FurEverHome</h3>
-                            <p class="project-type right-align-text">UX. UI. PROTOTYPING</p>
+                            <p class="project-type right-align-text">UX. UI. MOBILE DESIGN</p>
                         </div>
                         <p class="project-description">A fictional mobile application dedicated to supporting new and current rescued dog owners.</p> 
                         <a href="fureverhome.html" class="label-button">View Project →</a>
@@ -207,7 +207,7 @@
                         </a>
                         <div class=" grid two-col-index-grid">
                             <h3>Splitwise</h3>
-                            <p class="project-type right-align-text">UX. UI. PROTOTYPING</p>
+                            <p class="project-type right-align-text">UX. UI. MOBILE DESIGN</p>
                         </div>
                         <p class="project-description">A UI/UX Feature Design project for the expense splitting mobile application Splitwise.</p> 
                         <a href="Splitwise.html" class="label-button">View Project →</a>
