--- a/passion.html
+++ b/passion.html
@@ -91,7 +91,7 @@
             </figure>
 
             <figure class="figure-analysis project-img static-img">
-                <a href="https://www.figma.com/proto/CtfvvWPFcsgynSgrrxuZjZ/Co-op-Dump?page-id=33%3A45&node-id=33-46&viewport=333%2C212%2C0.05&t=gCsEVtg5NhYNvCZC-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=33%3A46" target="_blank">
+                <a href="https://www.figma.com/proto/CtfvvWPFcsgynSgrrxuZjZ/Passion-projects?page-id=33%3A45&node-id=33-46&viewport=803%2C210%2C0.18&t=JyvOimqe6B947e9g-1&scaling=contain&content-scaling=fixed&starting-point-node-id=33%3A46" target="_blank">
                     <img alt="Spotify Vibe Check Feature Design" class="lazy js-off" src="img\otherProjects\Misc\SpotifyRedesign_400.webp"
                     data-src="img\otherProjects\Misc\SpotifyRedesign_400.webp"
                     data-srcset="img\otherProjects\Misc\SpotifyRedesign_400.webp 400w,
@@ -107,7 +107,7 @@
                         >
                     </noscript>
                 </a>
-                <figcaption class="caption-analysis">Spotify "Vibe Check" Feature Design <a href="https://www.figma.com/proto/CtfvvWPFcsgynSgrrxuZjZ/Co-op-Dump?page-id=33%3A45&node-id=33-46&viewport=333%2C212%2C0.05&t=gCsEVtg5NhYNvCZC-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=33%3A46" class="in-text-link" target="_blank"> (click here or the image to view the full project)</a></figcaption>
+                <figcaption class="caption-analysis">Spotify "Vibe Check" Feature Design <a href="https://www.figma.com/proto/CtfvvWPFcsgynSgrrxuZjZ/Passion-projects?page-id=33%3A45&node-id=33-46&viewport=803%2C210%2C0.18&t=JyvOimqe6B947e9g-1&scaling=contain&content-scaling=fixed&starting-point-node-id=33%3A46" class="in-text-link" target="_blank"> (click here or the image to view the full project)</a></figcaption>
             </figure>
         </div>
 
