--- a/fraserhealth.html
+++ b/fraserhealth.html
@@ -53,7 +53,7 @@
                     <div class="grid project-roles three-col-project-grid">
                         <div>
                             <h3>My Role</h3>
-                            <p>Digital Media Communication Specialist</p>
+                            <p>Digital Media Communications Designer</p>
                         </div>
                         <div>
                             <h3>Project Type</h3>
